feat(add profile functionality - create, update, read)
