# src/api/url_patterns_v0_0_0/profile.py
@@ -1,0 +1,10 @@
+from django.urls import path
+from src.api.views.profile import ProfileAPIView
+
+profile_urlpatterns = [
+    path(
+        "",
+        ProfileAPIView.as_view(),
+        name="profile",
+    ),
+]
